<resources>
    <string name="app_name">Chetna Mart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvWelcome">"Welcome! "</string>
    <string name="btnSignIn">Sign In</string>
    <string name="tvForgotPassword">Forgot Password?</string>
    <string name="tvOr">Or</string>
    <string name="tvNewSignUp">Don\'t have an account? Sign Up</string>
    <string name="hintPassword">Password (at least 8 char)</string>
    <string name="hintEmail">Email Id</string>
    <string name="btnCrossDescription">cross button</string>
    <string name="hintName">Name</string>

    <string name="hintConfirmPassword">Confirm Password</string>
    <string name="tvSignUp">Sign Up</string>
    <string name="tvAlreadySignIn">Already have an account?Sign In</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="dontWorry">Don\'t Worry, we just need your registered email address and its done</string>
    <string name="provideEmail">Provide your Registered Email Here</string>
    <string name="resetPassword">Reset Password</string>
    <string name="checkInbox">Check your inbox after clicking the button above.</string>
    <string name="goBack"><![CDATA[< < Go Back]]></string>
    <string name="forgotPasswordImage">Image Loading</string>
    <string name="mail">mail image</string>
    <string name="recoveryEmail">Recovery email sent successfully! Cheak your inbox.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tv_Not_Signed_In">Not Signed In</string>
    <string name="tv_Email_Address">Email Address</string>

    <string name="menu_My_Orders">My Orders</string>
    <string name="menu_My_Rewards">My Rewards</string>
    <string name="menu_My_Wishlist">My Wishlist</string>
    <string name="menu_My_Cart">My Carts</string>
    <string name="menu_My_Account">My Account</string>


    <string name="forgotPassword">Forgot Password</string>
    <string name="dontWorry">Don\'t Worry, we just need your registered email address and its done</string>
    <string name="provideEmail">Provide your Registered Email Here</string>
    <string name="resetPassword">Reset Password</string>
    <string name="checkInbox">Check your inbox after clicking the button above.</string>
    <string name="goBack"><![CDATA[< < Go Back]]></string>
    <string name="forgotPasswordImage">Image Loading</string>
    <string name="mail">mail image</string>
    <string name="recoveryEmail">Recovery email sent successfully! Cheak your inbox.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>