<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chetna_mart"
            android:icon="@drawable/ic_chetna_mart"
            android:title="@string/menu_My_Orders" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_my_orders_icon"
            android:title="@string/menu_My_Orders" />
        <item
            android:id="@+id/nav_my_rewards"
            android:icon="@drawable/ic_my_rewards_icon"
            android:title="@string/menu_My_Rewards" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_cart_icon"
            android:title="@string/menu_My_Cart" />
        <item
            android:id="@+id/nav_my_wishlist"
            android:icon="@drawable/ic_my_wishlist_icon"
            android:title="@string/menu_My_Wishlist" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_my_account_icon"
            android:title="@string/menu_My_Account" />
    </group>
    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_sign_out_icon"
        android:title="@string/menu_My_Orders" />
</menu>