<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-244dp">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="122dp"
            android:layout_height="52dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/btn_theme"
            android:fontFamily="@font/alike"
            android:text="@string/btnSignIn"
            android:textColor="@color/royalBlue"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/etSignInPassword"
            android:layout_width="312dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:textColor="@color/royalBlue"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/etSignInEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etSignInEmail"
            app:layout_constraintTop_toBottomOf="@+id/etSignInEmail"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etSignInEmail"
            android:layout_width="312dp"
            android:layout_height="45dp"
            android:layout_marginTop="68dp"
            android:autofillHints=""
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/royalBlue"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageButton
            android:id="@+id/btnCross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btnCrossDescription"
            android:padding="16dp"
            android:src="@android:drawable/btn_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/aladin"
            android:text="@string/tvWelcome"
            android:textColor="@color/royalBlue"
            android:textSize="80sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/basic"
            android:text="@string/tvForgotPassword"
            android:textColor="@color/royalBlue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="@+id/etSignInPassword"
            app:layout_constraintTop_toBottomOf="@+id/etSignInPassword" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/basic"
            android:text="@string/tvOr"
            android:textColor="@color/royalBlue"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="128dp"
            android:fontFamily="@font/basic"
            android:text="@string/tvNewSignUp"
            android:textColor="@color/royalBlue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>