<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="193dp"
            android:layout_height="51dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/btn_theme"
            android:enabled="false"
            android:fontFamily="@font/alike"
            android:text="@string/resetPassword"
            android:textAllCaps="false"
            android:textColor="@color/disabledBtn"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etProvideEmail" />

        <EditText
            android:id="@+id/etProvideEmail"
            android:layout_width="312dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="40dp"
            android:autofillHints=""
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/provideEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/royalBlue"
            app:layout_constraintBottom_toTopOf="@+id/btnResetPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDontWorry" />

        <ImageView
            android:id="@+id/ivForgotPassword"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="96dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/forgotPasswordImage"
            android:src="@drawable/forgot_password"
            app:layout_constraintBottom_toTopOf="@+id/tvForgotPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/forgot_password_imageIcon_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/btnResetPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etProvideEmail">

            <ImageView
                android:id="@+id/forgot_password_mail"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:contentDescription="@string/mail"
                android:src="@drawable/ic_baseline_mail_outline_25"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_recovery_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/basic"
                android:text="@string/recoveryEmail"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:visibility="gone" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/forgot_password_progessBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/forgot_password_imageIcon_container"
            app:layout_constraintStart_toStartOf="@+id/forgot_password_imageIcon_container"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_imageIcon_container" />

        <TextView
            android:id="@+id/tvGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="124dp"
            android:fontFamily="@font/basic"
            android:text="@string/goBack"
            android:textColor="@color/royalBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/alike"
            android:text="@string/forgotPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/tvDontWorry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivForgotPassword" />

        <TextView
            android:id="@+id/tvDontWorry"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="1dp"
            android:fontFamily="@font/basic"
            android:text="@string/dontWorry"
            android:textAlignment="center"
            android:textColor="@color/royalBlue"
            app:layout_constraintBottom_toTopOf="@+id/etProvideEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivForgotPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>